--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -60,7 +60,7 @@
                 <img src="src/img/Screenshot_RuStore_00_ENG.png" alt="Update" class="ss-img">
                 <div class="text-content">
                     <h1>Custom UI</h1>
-                    <p>Use large variety of settings provided by reverseGram to customise your app's look and feel.</p>
+                    <p>Enjoy a fresh modern look using Telegram's design system, Google's Material 3 and custom icons.</p>
                 </div>
             </div>
         </div>
