--- a/new/test/home.html
+++ b/new/test/home.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Home</title>
     <!-- styles -->
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="stylesheet" href="src/style/fonts.css">
     <link rel="stylesheet" href="src/style/scrollbar.css">
     <!-- styles -->
-    <script src="src/js/websiteInfo.js"></script>
 </head>
 <body>
     <header>
@@ -139,8 +138,11 @@
         <div class="website-info">
         </div>
     </div>
+    <!-- scripts -->
+    <script src="src/js/websiteInfo.js"></script>
     <script src="src/js/lang.js"></script>
     <script src="src/js/app.js"></script>
+    <!-- scripts -->
 </body>
 <footer>
     <div class="website_info">
