Added Ukraine language

--- a/new/test/home.html
+++ b/new/test/home.html
@@ -15,8 +15,10 @@
     <header>
         <div class="lang">
             <select class="change-lang">
-                <option value="ru">RU</option>
                 <option value="en" selected>EN</option>
+                <option value="ru">RU</option>
+               <!-- <option value="ua">UA</option> -->
+               <!-- <option value="by">BY</option> -->
             </select>
         </div>
         <a class="lng-about_us" href="#about">About us</a>
