Added Ukrainian language

--- a/new/test/home.html
+++ b/new/test/home.html
@@ -17,7 +17,7 @@
             <select class="change-lang">
                 <option value="en" selected>EN</option>
                 <option value="ru">RU</option>
-               <!-- <option value="ua">UA</option> -->
+                <option value="ua">UA</option>
                <!-- <option value="by">BY</option> -->
             </select>
         </div>
@@ -70,7 +70,7 @@
                         <img class="listpic" src="https://avatars.githubusercontent.com/u/72266338?v=4"></img>
                         <div class="listinfo">
                             <div class="listname">bublickk</div>
-                            <div class="listdesc">@CherryMerryy</div><div class="lng-teamdesc-bblckk"></div>
+                            <div class="listdesc">@CherryMerryy | TG</div><div class="lng-teamdesc-bblckk"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/CherryMerryy'">arrow_forward_ios</div>
@@ -80,7 +80,7 @@
                         <img class="listpic" src="src/img/TeamMembers/geniy.jpg"></img>
                         <div class="listinfo">
                             <div class="listname">geniy</div>
-                            <div class="listdesc">@Kira_is_god</div><div class="lng-teamdesc-geniy"></div>
+                            <div class="listdesc">@Kira_is_god | TG</div><div class="lng-teamdesc-geniy"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
@@ -90,7 +90,7 @@
                         <img class="listpic" src="src/img/TeamMembers/dead_bebrax.jpg"></img>
                         <div class="listinfo">
                             <div class="listname">dead_bebrax</div>
-                            <div class="listdesc">@dead_bebrax</div><div class="lng-teamdesc-dead_bebrax"></div>
+                            <div class="listdesc">@dead_bebrax | VK</div><div class="lng-teamdesc-dead_bebrax"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://vk.com/dead_bebrax'">arrow_forward_ios</div>
@@ -100,7 +100,7 @@
                         <img class="listpic" src="src/img/TeamMembers/steven56.jpg"></img>
                         <div class="listinfo">
                             <div class="listname">steven56</div>
-                            <div class="listdesc">@steven56</div><div class="lng-teamdesc-steven56"></div>
+                            <div class="listdesc">@steven56 | VK</div><div class="lng-teamdesc-steven56"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://vk.com/steven56'">arrow_forward_ios</div>
@@ -110,7 +110,7 @@
                         <img class="listpic" src="src/img/TeamMembers/bebreef.jpg"></img>
                         <div class="listinfo">
                             <div class="listname">bebreef</div>
-                            <div class="listdesc">@bebreef</div><div class="lng-teamdesc-bebreef"></div>
+                            <div class="listdesc">@bebreef | TG & VK</div><div class="lng-teamdesc-bebreef"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/bebreef'">arrow_forward_ios</div>
@@ -121,7 +121,7 @@
                         <img class="listpic" src="src/img/TeamMembers/okokus.jpg"></img>
                         <div class="listinfo">
                             <div class="listname">okoka</div>
-                            <div class="listdesc">@okokus</div><div class="lng-teamdesc-okokus"></div>
+                            <div class="listdesc">@okokus | VK</div><div class="lng-teamdesc-okokus"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://vk.com/okokus'">arrow_forward_ios</div>
