--- a/new/test/home.html
+++ b/new/test/home.html
@@ -18,7 +18,8 @@
                 <option value="en" selected>EN</option>
                 <option value="ru">RU</option>
                 <option value="ua">UA</option>
-               <!-- <option value="by">BY</option> -->
+                <option value="cz">CZ</option>
+                <option value="by">BY</option>
             </select>
         </div>
         <a class="lng-about_us" href="#about">About us</a>
@@ -40,7 +41,7 @@
                 <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/TheOceanShore_MiniLogo.png"></img>
+                        <img class="listpic" src="src/img/Logo/TheOceanShore_MiniLogo.png"/>
                         <div class="listinfo">
                             <div class="listname" id="storm_version">The Ocean Shore | Game |<script>getStormInfo()</script></div>
                             <div class="lng-storm_desc"></div>
@@ -50,7 +51,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/Logo/Reverse_Launcher.png"></img>
+                        <img class="listpic" src="src/img/Logo/Reverse_Launcher.png"/>
                         <div class="listinfo">
                             <div class="listname" id="launcher_version">Reverse Launcher | App<script>getLauncherInfo()</script></div>
                             <div class="lng-launcher_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas doloribus asperiores accusamus nulla? Officiis delectus aut enim soluta hic libero nobis quae nemo excepturi, corporis numquam. In inventore minima dolorem?</div>
@@ -67,7 +68,7 @@
                 <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ team.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="https://avatars.githubusercontent.com/u/72266338?v=4"></img>
+                        <img class="listpic" src="https://avatars.githubusercontent.com/u/72266338?v=4"/>
                         <div class="listinfo">
                             <div class="listname">bublickk</div>
                             <div class="listdesc">@CherryMerryy | TG</div><div class="lng-teamdesc-bblckk"></div>
@@ -77,7 +78,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/geniy.jpg"></img>
+                        <img class="listpic" src="src/img/TeamMembers/geniy.jpg"/>
                         <div class="listinfo">
                             <div class="listname">geniy</div>
                             <div class="listdesc">@Kira_is_god | TG</div><div class="lng-teamdesc-geniy"></div>
@@ -87,7 +88,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/dead_bebrax.jpg"></img>
+                        <img class="listpic" src="src/img/TeamMembers/dead_bebrax.jpg"/>
                         <div class="listinfo">
                             <div class="listname">dead_bebrax</div>
                             <div class="listdesc">@dead_bebrax | VK</div><div class="lng-teamdesc-dead_bebrax"></div>
@@ -97,7 +98,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/steven56.jpg"></img>
+                        <img class="listpic" src="src/img/TeamMembers/steven56.jpg"/>
                         <div class="listinfo">
                             <div class="listname">steven56</div>
                             <div class="listdesc">@steven56 | VK</div><div class="lng-teamdesc-steven56"></div>
@@ -107,7 +108,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/bebreef.jpg"></img>
+                        <img class="listpic" src="src/img/TeamMembers/bebreef.jpg"/>
                         <div class="listinfo">
                             <div class="listname">bebreef</div>
                             <div class="listdesc">@bebreef | TG & VK</div><div class="lng-teamdesc-bebreef"></div>
@@ -118,7 +119,7 @@
                     </a>
                     <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ collaboration.txt </div>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/okokus.jpg"></img>
+                        <img class="listpic" src="src/img/TeamMembers/okokus.jpg"/>
                         <div class="listinfo">
                             <div class="listname">okoka</div>
                             <div class="listdesc">@okokus | VK</div><div class="lng-teamdesc-okokus"></div>
@@ -137,6 +138,7 @@
                 <p class="text-p">Telegram:<a href="https://t.me/reverseofficial">@reverseentofficial</a></p>
                 <p class="text-p">VK:<a href="https://vk.com/reverseentofficial">@reverseentofficial</a></p>
                 <p class="text-p">Twitter:<a href="https://twitter.com/reverseentoffi">@reverseentoffi</a></p>
+                <p class="text-p">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
             </div>
         </div>
         <div class="website-info">
