Added Czech & Belarusian languages

--- a/new/test/home.html
+++ b/new/test/home.html
@@ -19,7 +19,7 @@
                 <option value="ru">RU</option>
                 <option value="ua">UA</option>
                 <option value="cz">CZ</option>
-                <option value="by">BY</option>
+                <option value="be">BE</option>
             </select>
         </div>
         <a class="lng-about_us" href="#about">About us</a>
