Update home(v2) page

--- a/new/home.html
+++ b/new/home.html
@@ -28,6 +28,9 @@
             <li>
                 <a class="nav-btn-s-rg" href="products/reversegram.html">reverseGram</a>
             </li>
+            <li>
+                <a class="nav-btn" href="test/home.html">Check out new website version</a>
+            </li>
         </ul>
     </header>
     <div class="product-news-block">
