--- a/new/test/home.html
+++ b/new/test/home.html
@@ -15,11 +15,11 @@
     <header>
         <div class="lang">
             <select class="change-lang">
-                <option value="en" selected>EN</option>
-                <option value="ru">RU</option>
-                <option value="ua">UA</option>
-                <option value="cz">CZ</option>
-                <option value="be">BE</option>
+                <option value="en" selected>🇺🇸</option>
+                <option value="ru">🇷🇺</option>
+                <option value="ua">🇺🇦</option>
+                <option value="cz">🇨🇿</option>
+                <option value="by">🇧🇾</option>
             </select>
         </div>
         <a class="lng-about_us" href="#about">About us</a>
