--- a/new/test/home.html
+++ b/new/test/home.html
@@ -43,7 +43,7 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/TheOceanShore_MiniLogo.png"/>
                         <div class="listinfo">
-                            <div class="listname" id="storm_version">The Ocean Shore | Game |<script>getStormInfo()</script></div>
+                            <div class="listname" id="storm_version">The Ocean Shore | Game |</div>
                             <div class="lng-storm_desc"></div>
                         </div>
                         <div class="actbtns">
@@ -53,7 +53,7 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/Reverse_Launcher.png"/>
                         <div class="listinfo">
-                            <div class="listname" id="launcher_version">Reverse Launcher | App<script>getLauncherInfo()</script></div>
+                            <div class="listname" id="launcher_version">Reverse Launcher | App |</div>
                             <div class="lng-launcher_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas doloribus asperiores accusamus nulla? Officiis delectus aut enim soluta hic libero nobis quae nemo excepturi, corporis numquam. In inventore minima dolorem?</div>
                         </div>
                         <div class="actbtns">
